cmake_minimum_required(VERSION 3.21)
project(week1)

set(CMAKE_CXX_STANDARD 14)

#add_executable(week1 main.cpp name.cpp)
#add_executable(week1 name.cpp functionsLearn.cpp)
#add_executable(week1 functionsLearn.cpp fileHandling.cpp)
#add_executable(week1 filesLearn/fileHandling.cpp google/lesson1.cpp)
add_executable(week1 google/lesson1.cpp)
